tests/invalid/redefine.c
int main() {
    int a = 1;
    int a = 2;
    return a;
}
// ERROR: Line 3, Error 3004